--- a/app/src/main/res/layout/activity_habits.xml
+++ b/app/src/main/res/layout/activity_habits.xml
@@ -8,8 +8,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="93dp" />
+        android:layout_below="@+id/addButton" />
 
     <Button
         android:id="@+id/addButton"
