--- a/app/src/main/res/layout/activity_habits.xml
+++ b/app/src/main/res/layout/activity_habits.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/habitsListView"
+        android:id="@+id/locationsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
