--- a/app/src/main/res/layout/fragment_mood_dialog.xml
+++ b/app/src/main/res/layout/fragment_mood_dialog.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="10dp"
-        android:hint="location"
+        android:hint="city"
         android:layout_below="@id/addLocationTextView"/>
 
     <Button
