add refresh button; clean old code

--- a/app/src/main/res/layout/fragment_forecast_detail.xml
+++ b/app/src/main/res/layout/fragment_forecast_detail.xml
@@ -5,20 +5,42 @@
     android:layout_height="match_parent"
     tools:context=".ui.ForecastDetailFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewFDF"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/locTitleTextView"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/locTitleTextViewFDF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/refreshButton"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:text="R" />
+
+            <TextView
+                android:id="@+id/locTitleTextViewFDF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="TextView" />
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewFDF"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+
 
 </FrameLayout>
