change color scheme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+
+    android:background="@drawable/filip_zrnzevic_unsplash">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="160dp"
         android:text="weather442"
-        android:textSize="40dp" />
+        android:textSize="35dp"
+        android:textColor="@color/colorPrimaryLight"/>
 
     <Button
         android:id="@+id/locationsButton"
