--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorPrimary">#477e7c</color>
+    <color name="colorPrimaryDark">#0b5959</color>
     <color name="colorPrimaryLight">#CFD8DC</color>
     <color name="colorTextIcons">#FFFFFF</color>
-    <color name="colorAccent">#FF5252</color>
+    <color name="colorAccent">#05b19a</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="colorDivider">#BDBDBD</color>
