--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,10 +9,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="38dp"
-        android:text="Weather" />
+        android:textSize="40dp"
+        android:text="weather442" />
 
     <TextView
-        android:id="@+id/linksTextView"
+        android:id="@+id/aboutTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -21,6 +22,54 @@
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="38dp"
-        android:text="Links" />
+        android:text="This is an app, that retrieves weather data from MetaWeather API, and uses firebase to store data. Developed by Natalia Telpukhova. If you wish to get in touch with me or check out the code for this app, see the links below." />
+
+    <TextView
+        android:id="@+id/linksTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/aboutTextView"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="38dp"
+        android:text="Links:" />
+
+    <TextView
+        android:id="@+id/githubTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_github_box_black_24dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linksTextView"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:text=" see source code" />
+
+    <TextView
+        android:id="@+id/linkedinTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_linkedin_box_black_24dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/githubTextView"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:text=" contact me on linkedIn" />
+
+    <TextView
+        android:id="@+id/emailTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_email_black_24dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linkedinTextView"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:text=" shoot me an e-mail" />
 
 </RelativeLayout>
