make anonymous log in  - a default log in, and an opportunity to log in in overflow menu

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_logout"
-        android:title="Logout"
+        android:title="Log out/Log in"
         android:visible="true"
         app:showAsAction="never" />
 </menu>
