--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,6 +90,17 @@
             android:id="@+id/registerTextView"
             android:layout_gravity="center_horizontal" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/colorTextIcons"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:text="Use app as a guest"
+            android:id="@+id/anonimouslyTextView"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 
     <TextView
