fix anonymous login issue: now it will write to the same node after reopening the app

--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -23,4 +23,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/locationsRecyclerView"/>
+
+    <TextView
+        android:id="@+id/authenticatedUserTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:text="test"
+        android:textSize="15dp"
+        android:textColor="@color/colorPrimaryLight"/>
 </RelativeLayout>
