cleanup code; add form validation for dialog

--- a/app/src/main/res/layout/fragment_addloc_dialog.xml
+++ b/app/src/main/res/layout/fragment_addloc_dialog.xml
@@ -29,7 +29,7 @@
         android:layout_marginLeft="10dp"
         android:hint="city"
         android:layout_below="@id/addLocationTextView"
-        android:text="Detroit"/>
+        android:text=""/>
 
     <Button
         android:id="@+id/submitButton"
